another way to publish map

--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./lib/v5.3.0-dist/ol.css">
-    <link rel="stylesheet" href="./style.css">
+    <title>OpenLayers</title>
+    <link rel="stylesheet" href="./lib/v6.14.1-dist/ol.css">
+    <link rel="stylesheet" href="./style.css"> <!-- link of current css file -->
 </head>
 <body>
 
-    <div id="popup-container" class="pop-contain">
-        <p id="popup-coordinator" class="pop-coordinat" ></p>
+    <div id="popup-container">
+        <p id="popup-coordinate"></p>
     </div>
-
-
-    <div id='map' class="'js-map"></div>
+    <div id='map' class='map'></div>
+    <script src = './lib/v6.14.1-dist/ol.js'></script>
     <script src = './main.js'></script>
-    <script src = './lib/v5.3.0-dist/ol.js'></script>
+    
 </body>
 </html>
