--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 <body>
 
-    <div id="popup-container">
-        <p id="popup-coordinate"></p>
+    <div class="overlay-container">
+        <span class="overlay-text" id="feature-name"></span><br>
+        <span class="overlay-text" id="feature-area"></span><br>
     </div>
-    <div id='map' class='map'></div>
+    <div id='map' class='map'>
+        
+    </div>
+    <input type="checkbox" id="visible" value = 'OpenStreetMap' checked> Toggle Layer Visibility
     <script src = './lib/v6.14.1-dist/ol.js'></script>
     <script src = './main.js'></script>
     
