added delete functionality

--- a/digitization_with_openlayers/index.html
+++ b/digitization_with_openlayers/index.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 
-    <div id="edit-button">  `   
+    <div id="edit-button"> 
         <button id="start-edit"> Start Edit</button>
         <button id="stop-edit"> Stop Edit</button>
+        <button id="delete-fc"> Delete Feature</button>
     </div>
 
    
