--- a/digitization_with_openlayers/index.html
+++ b/digitization_with_openlayers/index.html
@@ -13,6 +13,13 @@
 <body>
 
     <div id="edit-button"> 
+        <select name="geometry" id="geometry">
+            <!-- <option value="Select Geometry">Select Geometry</option> -->
+            <option value="Point">Point</option>
+            <option value="Linestring">Line</option>
+            <option value="Polygon">Polygon</option>
+        </select>
+
         <button id="start-edit"> Start Edit</button>
         <button id="stop-edit"> Stop Edit</button>
         <button id="delete-fc"> Delete Feature</button>
