Added Clear Feature Button

--- a/digitization_with_openlayers/index.html
+++ b/digitization_with_openlayers/index.html
@@ -22,6 +22,9 @@
 
         <button id="start-edit"> Start Edit</button>
         <button id="stop-edit"> Stop Edit</button>
+
+        <button id="clr-fc"> Clear Feature</button>
+
         <button id="delete-fc"> Delete Feature</button>
     </div>
 
