--- a/digitization_with_openlayers/index.html
+++ b/digitization_with_openlayers/index.html
@@ -13,27 +13,43 @@
 </head>
 <body>
 
-    <div id="edit-button"> 
-        <select name="geometry" id="geometry">
-            <!-- <option value="Select Geometry">Select Geometry</option> -->
-            <option value="Point">Point</option>
-            <option value="Linestring">Line</option>
-            <option value="Polygon">Polygon</option>
-        </select>
+    <div id="Tools-bar">
 
-        <button id="refresh" onClick="window.location.reload();"> Refresh</button>
+        <!-- Edit Tools Section -->
+        <div id="edit-button" class="collapsible">
+            <h3 style="text-align: center; cursor: pointer;"> Editing Tools &#x25BC; </h3>
+            <div class="content">
+                <select name="geometry" id="geometry">
+                    <!-- <option value="Select Geometry">Select Geometry</option> -->
+                    <option value="Point">Point</option>
+                    <option value="Linestring">Line</option>
+                    <option value="Polygon">Polygon</option>
+                </select>
+                <button id="refresh" onClick="window.location.reload();"> Refresh</button>
+                <button id="start-edit"> Start Edit</button>
+                <button id="stop-edit"> Stop Edit</button>
+                <button id="clr-fc"> Clear Feature</button>
+                <button id="delete-fc"> Delete Feature</button>
+            </div>
+        </div>
+    
+        <!-- Geoprocessing Tools Section -->
+        <div id="geoprocessing" class="collapsible">
+            <h3 style="text-align: center; cursor: pointer;"> Geoprocessing Tools &#x25BC; </h3>
+            <div class="content">
+                <!-- Geoprocessing tools content here -->
+                <label for="distance">Distance in Mtrs:</label>
+                <input type="number" id="distance" />
+                <button id="buffer"> Buffer</button>
+                <button id="clearBuffer"> Clear Buffer</button>
+                <br>
+                <button id="Intersection">Intersection</button>
+                <button id="clearIntersectionEffects">Clear Intersection</button>
 
-        <button id="start-edit"> Start Edit</button>
-        <button id="stop-edit"> Stop Edit</button>
-
-        <button id="clr-fc"> Clear Feature</button>
-
-        <button id="delete-fc"> Delete Feature</button>
-
-
-        <!-- <button id="buffer"> Buffer</button> -->
-
+            </div>
+        </div>
     </div>
+    
 
    
 <!-- <label class="switch">
@@ -56,5 +72,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/ol@latest/dist/ol.js"></script>
     <script src="main.js"></script>
+    <!-- <script src="Geoprocessing.js"></script> -->
 </body>
 </html>
