all functionalities working fine

--- a/digitization_with_openlayers/index.html
+++ b/digitization_with_openlayers/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div id="dbtable">
-            <h3> Attribute Manupulation </h3>
+            <h3 style="text-align: center; margin: 5px;"> Attribute Manupulation </h3>
             <select name="" id="attribute">
                 <option value="0">Select Type</option>
                 <option value="Add Attribute">Add Column</option>
